--- a/example/index.html
+++ b/example/index.html
@@ -19,10 +19,104 @@
 	    table { border-collapse:collapse; }
 	    html {overflow-y: scroll;}
     
+		html,body{
+			width: 100%;
+			height: 100%
+		}
+
 		.cropper-box{
 			width: 100%;
 			text-align: center;
 			margin-top: 30px;
+		}
+
+		.add-file{
+			margin-top: 10px;
+			width: 100%;
+			height: 10vw;
+			position: relative;
+			overflow: hidden;
+		}
+
+		.add-file .add{
+			width: 10vw;
+			height: 10vw;
+			margin: 0 auto;
+			border: 1px solid #ccc;
+			position: relative;
+			overflow: hidden;
+			display: block;
+			cursor: pointer;
+		}
+		.add-file .add input{
+			display: block;
+			width: 100%;
+			height: 100%;
+			opacity: 0;
+			cursor: pointer;
+		}
+		.add-file .add:before{
+			width: 7vw;
+			height: 0;
+			top: 50%;
+			margin-top: -0.5px;
+			border-top: 1px solid #ccc;
+			content: '';
+			position: absolute;
+			left: 1.5vw
+		}
+		.add-file .add:after{
+			height: 7vw;
+			width: 0;
+			left: 50%;
+			margin-left: -0.5px;
+			border-left: 1px solid #ccc;
+			content: '';
+			position: absolute;
+			top: 1.5vw
+		}
+
+		.cut{
+			appearance: none;
+			outline: none;
+			background-color: #1e9a1c;
+			color: #fff;
+			padding: 10px 20px;
+			font-size: 20px;
+			text-align: center;
+			border: 0;
+			border-radius: 4px;
+			margin: 10px auto 0;
+			display: block;
+		}
+		.preview{
+			width: 100%;
+			position: relative;
+			overflow: hidden;
+			display: flex;
+			justify-content: space-around;
+			align-items: center;
+		}
+		.preview img{
+			width: 300px;
+			display: block;
+		}
+		@media screen and ( max-width: 750px){
+			.add-file{
+				height: 60vw;
+			}
+			.add-file .add{
+				width: 50vw;
+				height: 50vw;
+			}
+			.add-file .add:before{
+				width: 35vw;
+				left: 7.5vw;
+			}
+			.add-file .add:after{
+				height: 35vw;
+				top: 7.5vw;
+			}
 		}
     </style>
     <script src="../dist/JSCropper.js"></script>
@@ -33,9 +127,17 @@
 		<canvas id="cropper"></canvas>
 	</div>
 
-	<input type="file" accept="image/jpeg,image/jpg,image/png">
+	<div class="add-file">
+		<div class="add">
+			<input type="file" accept="image/jpeg,image/jpg,image/png">
+		</div>
+	</div>
 
-	<button>Cut</button>
+	<button class="cut">Cut</button>
+
+	<div class="preview">
+
+	</div>
 	<script>
 
 		window.addEventListener('DOMContentLoaded',ready,false);
@@ -43,7 +145,8 @@
 		function ready(){
 			var jc = new JSCropper({
 				el: '#cropper',
-				img: './images/pic.jpg'
+				img: './images/pic1.jpg',
+				debug: true
 			});
 			console.log(jc);
 
@@ -62,10 +165,11 @@
 			},false);
 
 			var button = document.getElementsByTagName('button')[0];
+			var preview = document.querySelector('.preview');
 			button.addEventListener('click',function(){
 				var img = new Image();
 				img.onload = function(){
-					document.body.appendChild(img);
+					preview.appendChild(img);
 				};
 				img.src = jc.cut();
 			},false);
